--- a/src/app/shared/components/button/primary-btn/primary-btn.component.scss
+++ b/src/app/shared/components/button/primary-btn/primary-btn.component.scss
@@ -1,11 +1,11 @@
 .btn{
-    background-color: tomato;
+    background-color: #2d8fdd;
     padding: 10px 15px;
     border-radius: 10px;
     color: #fff;
     font-size: 15px;
     cursor: pointer;
     &:hover{
-        background-color: rgba(255, 99, 71, 0.74);
+        background-color: #2f84ca;
     }
 }
